best-practices-mpol/add-safe-to-evict/.kyverno-test/exception-sibling-resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-cli-sibling
  namespace: default
spec:
  containers:
  - name: nginx
    image: nginx:1.14.1
    volumeMounts:
    - mountPath: /var/local/aaa
      name: mydir
  volumes:
  - name: mydir
    emptyDir: {}
