best-practices-mpol/add-safe-to-evict/.kyverno-test/exception-wrong-namespace-patched.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-cli-exception-pod
  namespace: other
  annotations:
    cluster-autoscaler.kubernetes.io/safe-to-evict: "true"
spec:
  containers:
  - name: nginx
    image: nginx:1.14.1
    volumeMounts:
    - mountPath: /var/local/aaa
      name: mydir
  volumes:
  - name: mydir
    emptyDir: {}
