best-practices-mpol/add-safe-to-evict/.kyverno-test/myapp-pod03-patched.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod03
  annotations:
    cluster-autoscaler.kubernetes.io/safe-to-evict: "true"
spec:
  containers:
  - name: nginx
    image: nginx:1.14.1
    volumeMounts:
    - mountPath: /var/local/aaa
      name: mydir
  volumes:
    - name: mydir
      emptyDir: {}
