best-practices-mpol/add-safe-to-evict/.kyverno-test/myapp-pod04-patched.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod04
  annotations:
    cluster-autoscaler.kubernetes.io/safe-to-evict: "true"
spec:
  containers:
  - name: nginx
    image: nginx:1.14.1
    volumeMounts:
    - mountPath: /var/local/aaa
      name: myfile
  volumes:
    - name: myfile
      hostPath:
        path: "/foo"
