best-practices-mpol/add-safe-to-evict/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: add-safe-to-evict
policies:
- ../add-safe-to-evict.yaml
resources:
- resource.yaml
- exception-resource.yaml
- exception-sibling-resource.yaml
- exception-wrong-namespace-resource.yaml
exceptions:
- exceptions.yaml
results:
- kind: Pod
  patchedResources: myapp-pod03-patched.yaml
  policy: add-safe-to-evict
  resources:
  - myapp-pod03
  result: pass
  isMUtatingPolicy: true
- kind: Pod
  policy: add-safe-to-evict
  resources:
  - myapp-pod01
  result: skip
  isMUtatingPolicy: true
- kind: Pod
  patchedResources: myapp-pod04-patched.yaml
  policy: add-safe-to-evict
  resources:
  - myapp-pod04
  result: pass
  isMUtatingPolicy: true
- kind: Pod
  policy: add-safe-to-evict
  resources:
  - myapp-pod02
  result: skip
  isMUtatingPolicy: true
- kind: Pod
  policy: add-safe-to-evict
  resources:
  - default/myapp-cli-exception-pod
  result: skip
  isMUtatingPolicy: true
- kind: Pod
  patchedResources: exception-sibling-patched.yaml
  policy: add-safe-to-evict
  resources:
  - myapp-cli-sibling
  result: pass
  isMUtatingPolicy: true
- kind: Pod
  patchedResources: exception-wrong-namespace-patched.yaml
  policy: add-safe-to-evict
  resources:
  - other/myapp-cli-exception-pod
  result: pass
  isMUtatingPolicy: true
